--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "nextcourse-frontend",
+  "name": "tog-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
