--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-form": "^3.5.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-star-rating-component": "^1.4.1"
