--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "google-maps-react": "^2.0.2",
     "jwt-decode": "^2.2.0",
     "npm": "^6.1.0",
     "react": "^16.4.0",
@@ -12,8 +13,8 @@
     "react-form": "^3.5.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-table": "^6.8.6",
-    "react-star-rating-component": "^1.4.1"
+    "react-star-rating-component": "^1.4.1",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
